[gd_scene load_steps=4 format=2]

[ext_resource path="res://Explosion.gd" type="Script" id=1]
[ext_resource path="res://explosion.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 72.0

[node name="Explosion" type="Area2D"]
scale = Vector2( 3, 3 )
collision_layer = 0
collision_mask = 4
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 3.8147e-06, 2.86102e-06 )
scale = Vector2( 4.5, 4.5 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="DefuseTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
autostart = true

[node name="PlayerDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
shape = SubResource( 1 )

[connection signal="body_entered" from="." to="." method="_on_Explosion_body_entered"]
[connection signal="timeout" from="DefuseTimer" to="." method="_on_DefuseTimer_timeout"]
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
